# md-parsers-benchmarks

./: parsers-benchmark.cabal  stack.yaml
app/: Main.hs
markdown-samples/: t1.md
